Fixed DemoGUI slot error and added more i18n